kubernetes/cluster/media/bazarr/bazarr.yaml
# Service: Bazarr
# Ingress: bazarr.brhd.io
# Label: app.kubernetes.io/name: bazarr
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: media
  labels:
    app.kubernetes.io/name: bazarr
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 6767
  selector:
    app.kubernetes.io/name: bazarr
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: media
  labels:
    app.kubernetes.io/name: bazarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bazarr
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  template:
    metadata:
      namespace: media
      labels:
        app.kubernetes.io/name: bazarr
    spec:
      restartPolicy: Always
      containers:
        - name: bazarr
          image: ghcr.io/hotio/bazarr:release-1.6.2
          resources:
            requests:
              memory: 500Mi
              cpu: 500m
            limits:
              memory: 1000Mi
              cpu: 1000m
          ports:
            - containerPort: 6767
          livenessProbe:
            httpGet:
              path: /api/system/ping
              port: 6767
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: bazarr-config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: bazarr-config
          persistentVolumeClaim:
            claimName: bazarr-config
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
